--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "chatApp",
+  "name": "learnMongoDB",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "run.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jquery": "^3.3.5",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "express-session": "^1.15.6",
-    "jquery": "^3.3.1",
+    "express-fileupload": "^0.4.0",
+    "express-socket.io-session": "^1.3.5",
+    "mime-types": "^2.1.19",
     "mongodb": "^3.1.1",
     "socket.io": "^2.1.1"
   }
