use 1 database for all router and module

--- a/config.json
+++ b/config.json
@@ -4,5 +4,9 @@
 		"asdasdasdasd",
 		"xyzxyzxyzyxz",
 		"skyewilloying"
-	]
+	],
+	"DATABASE_URL": "mongodb://127.0.0.1:27017/chatApp",
+	"HASH": {
+		"SALT_ROUND": 10
+	}
 }
