prepare to merge with master

--- a/config.json
+++ b/config.json
@@ -1,11 +1,9 @@
 {
 	"keys": [
-		"123456123456",
-		"asdasdasdasd",
-		"xyzxyzxyzyxz",
-		"skyewilloying"
+		"this_is_just_for_local",
+		"server_i_will_config_to_env"
 	],
-	"DATABASE_URL": "mongodb://127.0.0.1:27017/chatApp",
+	"LOCAL_DATABASE_URL": "mongodb://127.0.0.1:27017/chatApp",
 	"HASH": {
 		"SALT_ROUND": 10
 	}
