--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^3.1.1",
     "pg": "^7.4.3",
     "sharp": "^0.20.5",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "winston": "^3.0.0"
   }
 }
