--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ language:
 install:
   - npm install -g codecov
 script:
-  - istanbul cover mocha --reporter lcovonly -- -R spec
+  - istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec
   - codecov
