--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language:
   node_js
 install:
-  - npm install -g codecov
+  - npm install -g nyc
+  - npm install -g mocha
 script:
-  - istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec
-  - codecov
+  - nyc mocha
