--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language:
 node_js:
   "node"
 install:
+  - npm install
   - npm install -g nyc
   - npm install -g mocha
 script:
-  - npm test "app/*"
+  - npm test app/*
