--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha",
-    "coverage": "nyc report --reporter=text-lcov | node_module/coveralls/bin/coveralls",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "coveralls": "npm test app/* && npm run coverage app/*",
     "start": "node index.js"
   },
   "keywords": [],
