--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "coveralls": "npm test mocha test app/* && npm run coverage",
+    "coveralls": "npm test test app/* && npm run coverage test app/*",
     "start": "node index.js"
   },
   "keywords": [],
