--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nyc --reporter=html --reporter=text mocha",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "coveralls": "npm test test app/* && npm run coverage test app/*",
+    "test": "mocha app/test",
+    "coveralls": "nyc report --reporter=text-lcov mocha app/*/*.js | coveralls",
+    "coverage": "nyc --reporter=html --reporter=text mocha app/*/*.js",
     "start": "node index.js"
   },
   "keywords": [],
