--- a/config.json
+++ b/config.json
@@ -6,5 +6,9 @@
 	"LOCAL_DATABASE_URL": "mongodb://127.0.0.1:27017/chatApp",
 	"HASH": {
 		"SALT_ROUND": 10
+	},
+	"LocalStorage": {
+		"public": "public/images",
+		"private": "private/images"
 	}
 }
