--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "coveralls": "nyc report --reporter=text-lcov mocha app/*/*.js | coveralls",
     "coverage": "nyc --reporter=html --reporter=text mocha app/*/*.js",
     "start": "node index.js",
-    "lint": "node_modules/.bin/goodparts app/*/*"
+    "lint": "node_modules/.bin/goodparts app/*/*",
+    "test_google": "cross-env NODE_ENV=test_web node index.js"
   },
   "keywords": [],
   "author": "beohoang98",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "coveralls": "^3.0.2",
+    "cross-env": "^5.2.0",
     "eslint": "^5.2.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.13.0",
