--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 install:
   - npm install
   - npm install --save-dev nyc
-  - npm install -g mocha
+  - npm install --save-dev mocha
   - npm install --save-dev coveralls
 script:
   - npm test
