--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha app/test",
-    "coveralls": "nyc report --reporter=text-lcov mocha app/*/*.js | coveralls",
-    "coverage": "nyc --reporter=html --reporter=text mocha app/*/*.js",
+    "test": "node_modules/.bin/mocha app/test",
+    "coveralls": "node_modules/.bin/nyc report --reporter=text-lcov mocha app/*/*.js | coveralls",
+    "coverage": "node_modules/.bin/nyc --reporter=html --reporter=text mocha app/*/*.js",
     "start": "node index.js",
     "lint": "node_modules/.bin/goodparts app/*/*",
     "test_google": "cross-env NODE_ENV=test_web node index.js"
@@ -40,6 +40,7 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
-    "goodparts": "^1.2.1"
+    "goodparts": "^1.2.1",
+    "nyc": "^12.0.2"
   }
 }
