--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "devDependencies": {
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
-    "eslint": "^5.2.0",
+    "eslint": "^5.3.0",
+    "eslint-config-google": "^0.9.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-node": "^7.0.1",
