remove pg package, editing travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ node_js:
   "node"
 install:
   - npm install
-  - npm install --save-dev nyc
-  - npm install --save-dev mocha
+  - npm install -g nyc
+  - npm install -g mocha
   - npm install --save-dev coveralls
 script:
   - npm test
